--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,14 @@
 html {
   color: white;
 }
+
+/* Disable default webkit autocomplete styles */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition:
+    background-color 5000s ease-in-out 0s,
+    color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: hsl(var(--foreground)) !important;
+}
