--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 @layer base {
   :root {
     --radius: 0.5rem;
+    --placeholder-color: #6b7280;
+    --input-focus-bg: #6949ff14;
   }
 }
 
@@ -13,13 +15,58 @@ html {
   color: white;
 }
 
-/* Disable default webkit autocomplete styles */
+.password-input::placeholder {
+  color: var(--placeholder-color) !important;
+  opacity: 1 !important;
+}
+
+.password-input::-webkit-input-placeholder {
+  color: var(--placeholder-color) !important;
+  opacity: 1 !important;
+}
+
+.password-input::-moz-placeholder {
+  color: var(--placeholder-color) !important;
+  opacity: 1 !important;
+}
+
+.password-input:-ms-input-placeholder {
+  color: var(--placeholder-color) !important;
+  opacity: 1 !important;
+}
+
+.password-input::-ms-input-placeholder {
+  color: var(--placeholder-color) !important;
+  opacity: 1 !important;
+}
+
+.password-input:-webkit-autofill,
+.password-input:-webkit-autofill:hover,
+.password-input:-webkit-autofill:focus,
+.password-input:-webkit-autofill:active {
+  -webkit-text-fill-color: white !important;
+  -webkit-box-shadow: 0 0 0 1000px var(--input-focus-bg) inset !important;
+  box-shadow: 0 0 0 1000px var(--input-focus-bg) inset !important;
+  background-color: var(--input-focus-bg) !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+.password-input:-webkit-autofill::first-line {
+  color: white !important;
+}
+
+/* Ensure text is white when input has a value */
+.password-input:not(:placeholder-shown) {
+  color: white !important;
+}
+
+/* Force background color for autofilled inputs */
 input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
+input:-webkit-autofill:focus {
   transition:
-    background-color 5000s ease-in-out 0s,
-    color 5000s ease-in-out 0s;
-  -webkit-text-fill-color: hsl(var(--foreground)) !important;
+    background-color 600000s 0s,
+    color 600000s 0s;
+}
+input[data-autocompleted] {
+  background-color: var(--input-focus-bg) !important;
 }
